// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<About /> should render <About /> 1`] = `
<section
  class="sc-bdnxRM dazqpe"
>
  <div
    class="sc-hKFxyN jelMKq"
  >
    <h3
      class="sc-iCoGMd lebLBC"
    >
      Title here
    </h3>
    <p
      class="sc-fujyAs iFKMfc"
    >
      Some description
    </p>
  </div>
</section>
`;

exports[`<About /> should render <About /> with title hidden to user 1`] = `
<section
  class="sc-bdnxRM dazqpe"
>
  <div
    class="sc-hKFxyN jelMKq"
  />
</section>
`;
